--- a/index.html
+++ b/index.html
@@ -45,17 +45,7 @@
 	<body>
 		
 		<div class="content">
-			<img class="logo" src="dist/img/logo.png" alt="Circus Logo">
-			<div class="foreground">
-				<h1>Hello Universe!</h1>
-				<p>Yep, you've got the Circus Starter project working.</p>
-				<p>Congratulations! You're ready to code.</p>
-				<p class="github">
-					<a target="_blank" href="https://github.com/CreativeCircus/circus-starter">https://github.com/CreativeCircus/circus-starter</a>
-				</p>
-				<code>1.4.9</code>
-			</div>
-			<div class="background"></div>
+			Gwynn
 		</div>
 
 		<script src="dist/js/main.js"></script>
